# PocketPager

./: .gitignore  .gitmodules  LICENSE  README.md
native/: Makefile  pocketpager_test.c
pocketpager/: README.md  pubspec.yaml
pocketpager/android/app/: build.gradle.kts
pocketpager/android/app/src/main/: AndroidManifest.xml
pocketpager/android/app/src/main/cpp/: CMakeLists.txt  pager_lib.c
pocketpager/android/app/src/main/kotlin/com/example/pocketpager/: MainActivity.kt
pocketpager/android/app/src/main/kotlin/dev/sarahsforge/pocketpager/: MainActivity.kt
pocketpager/android/app/src/main/res/xml/: usb_device_filter.xml
pocketpager/ios/Runner/: Info.plist
pocketpager/ios/Runner.xcodeproj/: project.pbxproj
pocketpager/lib/: main.dart  pager_ffi.dart
pocketpager/lib/models/: address_entry.dart
pocketpager/lib/screens/: addresses_screen.dart  messages_screen.dart  settings_screen.dart
pocketpager/lib/services/: address_book_service.dart  settings_service.dart
pocketpager/linux/: CMakeLists.txt
pocketpager/linux/runner/: my_application.cc
pocketpager/macos/Runner.xcodeproj/: project.pbxproj
pocketpager/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
pocketpager/macos/Runner/Configs/: AppInfo.xcconfig
pocketpager/test/: widget_test.dart
pocketpager/web/: index.html  manifest.json
pocketpager/windows/: CMakeLists.txt
pocketpager/windows/runner/: Runner.rc  main.cpp
